--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -63,9 +63,6 @@ header {
   position: relative;
 }
 
-header ul.links {
-}
-
 header ul.links li{
   color: red;
 }
@@ -134,8 +131,13 @@ main.banner {
   min-height: 750px;
 }
 
-main.banner h1{
-  font-size: 30px;
+main.banner h1 {
+  font-size: 38px;
+  font-weight: 300;
+}
+
+main.banner p {
+  font-size: 20px;
   font-weight: 300;
 }
 
@@ -196,6 +198,10 @@ footer .copyright {
   footer ul.links li {
     width: 100%;
     padding: .5rem 0;
+  }
+
+  footer .copyright{
+    text-align: center;
   }
 }
 
@@ -294,18 +300,18 @@ footer .copyright {
     width: 140px;
     height: 140px;
     left: 10px;
-    top: -200px;
+    top: -160px;
   }
 
   .bs3 {
-    top: -320px;
+    top: -300px;
     left: 600px;
     height: 70px;
     width: 70px;
   }
 
   .bs4 {
-    top: 240px;
+    top: 300px;
     left: 550px;
     height: 110px;
     width: 110px;
